; ModuleID = '/home/carl/AnghaBench/git/extr_wt-status.c_wt_porcelain_print.c'
source_filename = "/home/carl/AnghaBench/git/extr_wt-status.c_wt_porcelain_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wt_status = type { i32, i32*, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wt_status*)* @wt_porcelain_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wt_porcelain_print(%struct.wt_status* %0) #0 {
  %2 = alloca %struct.wt_status*, align 8
  store %struct.wt_status* %0, %struct.wt_status** %2, align 8
  %3 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %4 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %3, i32 0, i32 3
  store i64 0, i64* %4, align 8
  %5 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %6 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %8 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %10 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %9, i32 0, i32 0
  store i32 1, i32* %10, align 8
  %11 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %12 = call i32 @wt_shortstatus_print(%struct.wt_status* %11)
  ret void
}

declare dso_local i32 @wt_shortstatus_print(%struct.wt_status*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
